# assas

./: Cargo.toml  README.md  setup.md  tech-arch.md
.github/workflows/: build.yml
scripts/: build_windows.sh  install.ps1
src/: main.rs
src/modules/: capture.rs  config.rs  hook.rs  mod.rs  security.rs  ui.rs
