[package]
name = "assas"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
# GUI & Graphics
eframe = { version = "0.24", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.24"

# OS Hooks & Utils
rdev = "0.5"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader"] }

# Media & Capture
xcap = "0.1"
image = { version = "0.25", features = ["webp"] }

# Security & Data
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "5.0"
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
rand = "0.8"
fs2 = "0.4"
